refactor: use stream API reduce listToMap method